# talklike.llm

./: .gitignore  README.md  README_COLAB.md  README_COMPLETE_SOLUTION.md  README_FINETUNE.md  RUNPOD_SETUP.md  availablemodels.json  babis_dataset_generator.py  babis_dialog_generator.py  cleanup_disk.py  colab_config.py  colab_data_collator.py  colab_dataset_loader.py  colab_finetune.base.ipynb  colab_finetune.ipynb  colab_finetune_simple.ipynb  colab_gradio.py  colab_hf_push.py  colab_imports.py  colab_install.py  colab_lora_setup.py  colab_model_load.py  colab_model_setup.py  colab_save_model.py  colab_setup_googledrive.py  colab_summary.py  colab_testing.py  colab_tokenization.py  colab_tokenizer.py  colab_training.py  colab_training_evaluation.py  colab_training_start.py  colab_utils.py  colab_wandb_init.py  finetune_babis.py  finetune_babis_llama.py  generate_answers.py  generate_qa_dataset.py  llm_cost_calculator.py  moderate_training_data.py  (+8 more)
1_data_preparation/: LLM.CreateAnswers.systemPrompt.md  LLM.CreateDialogue.systemPrompt.md  LLM.Outline.CreateTemplates.md  LLM.finetunning.systemPrompt.json  QUICKSTART.md  README.md  babis_templates_400.json  data_quality_check.py  dataset_merger.py  generate_answers.py  generate_qa_dataset.py  requirements_datapreparation.txt  run_data_preparation.py  test_data_preparation.py
2_finetunning/: ADAPTERS_README.md  PAD_TOKEN_FIXES.md  PAD_TOKEN_UNIFICATION.md  README.md  README_DOWNLOAD.md  README_FINETUNE.md  README_SCP_EXPORT.md  RUNPOD_SETUP.md  chat_babis.sh  chat_babis_simple.sh  chat_local.sh  chat_local_model.py  chat_with_babis.py  create_qlora_adapter.py  data_utils.py  debug_utils.py  finetune.py  finetune_babis.py  merge_adapter_to_full_model.py  quick_upload.sh  requirements_finetunning.txt  run_finetune.sh  run_mistral_finetune.sh  scp_debug_export.sh  scp_download.sh  test_adapter.py  test_apply_chat_template.py  test_mistral_final.py  test_mistral_fix.py  test_mistral_system.py  test_model.py  test_prompt_formatting.py  test_tokenization.py  tokenizer_utils.py  train_utils.py  upload_adapter_only.py  upload_to_hf.py
3_benchmarking/: CHANGES_FOR_ADAPTER.md  LLM.Benchmark.systemPrompt.md  QUICKSTART.md  QUICKSTART_ADAPTER.md  README.md  benchmark_questions.json  compare_models.py  create_benchmark_dataset.py  evaluate_style.py  generate_report.py  generate_responses.py  quick_test_adapter.py  requirements_benchmarking.txt  run_benchmark.py  run_benchmark_with_adapter.sh  test_adapter_integration.py  test_benchmark.py
3_benchmarking/results/: benchmark_dataset.json
3_benchmarking/results/after_finetune/: responses.json
3_benchmarking/results/before_finetune/: responses.json
3_benchmarking/results/comparison/: model_comparison.json  style_evaluation.json
3_benchmarking/results/reports/: benchmark_summary.md
3_benchmarking/results/results/: benchmark_dataset.json
3_benchmarking/results/results/after_finetune/: responses.json
3_benchmarking/results/results/before_finetune/: responses.json
3_benchmarking/results/results/comparison/: model_comparison.json  style_evaluation.json
3_benchmarking/results/results/reports/: benchmark_summary.md
TASK/: LLM.Outline.CreateTemplates.md  LLM.finetunning.systemPrompt.json  README.md
data/: all.jsonl  all.jsonl.backup
data/final/: batch_01_babis_output_qa.jsonl  batch_02_babis_output_qa.jsonl  batch_03_babis_output_qa.jsonl  batch_04_babis_output_qa.jsonl  batch_05_babis_output_qa.jsonl  batch_06_babis_output_qa.jsonl  batch_07_babis_output_qa.jsonl  batch_08_babis_output_qa.jsonl  batch_09_babis_output_qa.jsonl  batch_10_babis_output_qa.jsonl
disk_manager/: README.md  __init__.py  core.py
disk_manager/tests/: test_core.py
final/: batch_01_babis_output_qa.jsonl  batch_02_babis_output_qa.jsonl  batch_06_babis_output_qa.jsonl  batch_08_babis_output_qa.jsonl  batch_09_babis_output_qa.jsonl  batch_10_babis_output_qa.jsonl
finetunning/: README.md  mistral-v03-4bit-16bit.ipynb
lib/: babis_dataset_generator.py  babis_dialog_generator.py  openai_cost_calculator.py
lib/disk_manager/: pyproject.toml  setup.py
lib/disk_manager/tests/: __init__.py  test_core.py
